fix container gap/margin bottom

--- a/src/components/cards/Card.module.css
+++ b/src/components/cards/Card.module.css
@@ -1,8 +1,10 @@
 .card-container {
     display: flex;
     justify-content: center;
-    padding: 30px;
     gap: 20px;
+    padding: 30px;
+    margin-bottom: 50px;
+
 }
 
 .card-text {
