--- a/src/styles/Footer.css
+++ b/src/styles/Footer.css
@@ -2,8 +2,9 @@ footer {
     background-color: #222;
     color: white;
     text-align: center;
-    padding: 10px 0;
     position: fixed;
     bottom: 0;
     width: 100%;
+    margin-top: 20px;
+    height: 100px;
 }
